# cuba-search

./: .gitignore  README.md  benchmark_handlers.py  pyproject.toml  simpleqa_results.json
benchmarks/: simpleqa.py
src/cuba_search/: __init__.py  __main__.py  cache.py  compression.py  constants.py  crawler.py  docs.py  grounding.py  handlers.py  js_render.py  markdown.py  partitioning.py  protocol.py  quality.py  query.py  ranking.py  retrieval.py  scraper.py  semantic.py  server.py
src/cuba_search/data/: library_mapping.json  synonyms.json
tests/: test_compression.py  test_ranking.py  test_ssrf_fix.py  verify_ssrf_fix.py
