[project]
name = "cuba-search"
version = "1.0.0"
description = "Intelligent Web Search + Documentation MCP for AI Agents"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8",
    "model2vec>=0.4",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10"]
js = ["playwright>=1.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "radon>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-beautifulsoup4>=4.12",
]

[project.scripts]
cuba-search = "cuba_search.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuba_search"]

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
